# zlib

./: CMakeLists.txt  LICENSE.txt  README.md  zlib.pc.in
cmake/: zConfig.in.cmake  zlibConfig.in.cmake
examples/: CMakeLists.txt
src/: gzguts.h
